--- a/games/klavaro/Makefile
+++ b/games/klavaro/Makefile
@@ -22,9 +22,9 @@ LIB_DEPENDS=	pthread-stubs:${PORTSDIR}/devel/libpthread-stubs \
 		gtkdatabox:${PORTSDIR}/x11-toolkits/gtkdatabox \
 		xcb:${PORTSDIR}/x11/libxcb
 
+USES=		pkgconfig
 USE_BZIP2=	yes
 USE_GMAKE=	yes
-USE_PKGCONFIG=	build
 USE_GETTEXT=	yes
 USE_ICONV=	yes
 USE_XORG=	pixman x11 xau xcomposite xcursor xdamage xdmcp xext \
