--- a/graphics/autotrace/Makefile
+++ b/graphics/autotrace/Makefile
@@ -20,8 +20,7 @@ OPTIONS_DEFAULT=	IMAGEMAGICK PSTOEDIT
 MING_DESC=	Enable swf interface
 PSTOEDIT_DESC=	Convert postscript to other formats
 
-USES=	pathfix
-USE_PKGCONFIG=	build
+USES=	pathfix pkgconfig
 USE_AUTOTOOLS=	libtool
 USE_LDCONFIG=	yes
 MAKE_JOBS_SAFE= yes
