--- a/graphics/dri/Makefile
+++ b/graphics/dri/Makefile
@@ -12,7 +12,7 @@ COMMENT=	OpenGL hardware acceleration drivers for the DRI
 LIB_DEPENDS=	drm:${PORTSDIR}/graphics/libdrm \
 		expat.6:${PORTSDIR}/textproc/expat2
 
-USE_PKGCONFIG=	build
+USES=		pkgconfig
 USE_XORG=	glproto x11 xext xxf86vm xdamage xfixes dri2proto
 
 ALL_DRI_DRIVERS=I810 I915 I965 MACH64 MGA R128 R200 R300 R600 RADEON \
