--- a/graphics/evas-loader-generic/Makefile
+++ b/graphics/evas-loader-generic/Makefile
@@ -23,8 +23,8 @@ OPTIONS+=	${NODE:U} "Install ${NODE} evas generic loader" on
 DIST_SUBDIR=	e17
 USE_BZIP2=	yes
 GNU_CONFIGURE=	yes
+USES=		pkgconfig
 USE_EFL=	evas librt_hack libtool_hack
-USE_PKGCONFIG=	yes
 USE_LDCONFIG=	yes
 
 MAKEDIRS=	${WRKSRC}/src/modules/loaders/generic
