--- a/graphics/evas-loader-psd/Makefile
+++ b/graphics/evas-loader-psd/Makefile
@@ -17,8 +17,8 @@ LICENSE=	BSD
 DIST_SUBDIR=	e17
 USE_BZIP2=	yes
 GNU_CONFIGURE=	yes
+USES=		pkgconfig
 USE_EFL=	evas librt_hack libtool_hack
-USE_PKGCONFIG=	yes
 USE_LDCONFIG=	yes
 
 MAKEDIRS=	${WRKSRC}/src/modules/loaders/psd
