--- a/graphics/evas_generic_loaders-xcf/Makefile
+++ b/graphics/evas_generic_loaders-xcf/Makefile
@@ -17,8 +17,8 @@ LICENSE=	GPLv2
 DIST_SUBDIR=	e17
 USE_BZIP2=	yes
 GNU_CONFIGURE=	yes
+USES=		pkgconfig
 USE_EFL=	eina
-USE_PKGCONFIG=	yes
 USE_LDCONFIG=	yes
 
 BINSRC=		${WRKSRC}/src/bin/${PORTNAME}
