--- a/graphics/libcaca/Makefile
+++ b/graphics/libcaca/Makefile
@@ -10,9 +10,8 @@ MASTER_SITES=	http://caca.zoy.org/raw-attachment/wiki/libcaca/
 MAINTAINER=	multimedia@FreeBSD.org
 COMMENT=	Graphics library that outputs text instead of pixels
 
-USES=		pathfix
+USES=		pathfix pkgconfig
 USE_GNOME=	ltverhack
-USE_PKGCONFIG=	build
 USE_LDCONFIG=	yes
 USE_AUTOTOOLS=	libtool
 CONFIGURE_ARGS=	--disable-doc \
