--- a/graphics/libqrencode/Makefile
+++ b/graphics/libqrencode/Makefile
@@ -13,8 +13,7 @@ COMMENT=	A C library for encoding data in a QR Code symbol
 
 LIB_DEPENDS=	png15:${PORTSDIR}/graphics/png
 
-USE_PKGCONFIG=	yes
-USES+=		pathfix
+USES=		pathfix pkgconfig
 USE_LDCONFIG=	yes
 GNU_CONFIGURE=	yes
 LDFLAGS+=	-L${LOCALBASE}/lib
