--- a/graphics/ristretto/Makefile
+++ b/graphics/ristretto/Makefile
@@ -16,6 +16,7 @@ LIB_DEPENDS=	exif.12:${PORTSDIR}/graphics/libexif \
 		dbus-glib-1.2:${PORTSDIR}/devel/dbus-glib \
 		cairo.2:${PORTSDIR}/graphics/cairo
 
+USES=		pkgconfig
 USE_BZIP2=	yes
 GNU_CONFIGURE=	yes
 USE_GNOME=	gnomehack gtk20 glib20 intltool intlhack desktopfileutils
@@ -24,7 +25,6 @@ INSTALLS_ICONS=	yes
 USE_GETTEXT=	yes
 USE_XFCE=	configenv libmenu libutil xfconf
 USE_XORG=	x11
-USE_PKGCONFIG=	build
 
 post-install:
 	@-update-desktop-database
