--- a/games/poker-engine/Makefile
+++ b/games/poker-engine/Makefile
@@ -22,8 +22,8 @@ RUN_DEPENDS=	${LOCALBASE}/bin/rsync:${PORTSDIR}/net/rsync \
 LICENSE=	GPLv3
 LICENSE_FILE=	${WRKSRC}/COPYING
 
+USES=		pkgconfig
 USE_PYTHON=	2.5-2.7
-USE_PKGCONFIG=	yes
 USE_GETTEXT=	yes
 USE_GMAKE=	yes
 GNU_CONFIGURE=	yes
