--- a/graphics/evas-core/Makefile
+++ b/graphics/evas-core/Makefile
@@ -19,10 +19,9 @@ LIB_DEPENDS=	freetype:${PORTSDIR}/print/freetype2
 DIST_SUBDIR=	e17
 USE_BZIP2=	yes
 GNU_CONFIGURE=	yes
-USES=		pathfix
+USES=		pathfix pkgconfig
 USE_GCC=	any
 USE_EFL=	librt_hack libtool_hack
-USE_PKGCONFIG=	yes
 USE_LDCONFIG=	yes
 DATADIR=	${PREFIX}/share/evas
 EXAMPLESDIR=	${PREFIX}/share/examples/evas
