--- a/graphics/evas-engine-buffer/Makefile
+++ b/graphics/evas-engine-buffer/Makefile
@@ -19,8 +19,8 @@ LIB_DEPENDS=	freetype:${PORTSDIR}/print/freetype2
 DIST_SUBDIR=	e17
 USE_BZIP2=	yes
 GNU_CONFIGURE=	yes
+USES=		pkgconfig
 USE_EFL=	evas librt_hack libtool_hack
-USE_PKGCONFIG=	yes
 USE_LDCONFIG=	yes
 BUILD_WRKSRC=	${WRKSRC}/src/modules/engines/buffer
 INSTALL_WRKSRC=	${BUILD_WRKSRC}
