--- a/graphics/evas-loader-png/Makefile
+++ b/graphics/evas-loader-png/Makefile
@@ -20,8 +20,8 @@ LIB_DEPENDS=	png15:${PORTSDIR}/graphics/png \
 DIST_SUBDIR=	e17
 USE_BZIP2=	yes
 GNU_CONFIGURE=	yes
+USES=		pkgconfig
 USE_EFL=	evas librt_hack libtool_hack
-USE_PKGCONFIG=	yes
 USE_LDCONFIG=	yes
 
 MAKEDIRS=	${WRKSRC}/src/modules/loaders/png \
