--- a/graphics/libopenraw/Makefile
+++ b/graphics/libopenraw/Makefile
@@ -14,9 +14,9 @@ LIB_DEPENDS=	boost_thread:${PORTSDIR}/devel/boost-libs \
 		jpeg.11:${PORTSDIR}/graphics/jpeg
 
 MAKE_JOBS_SAFE=	yes
+USES=		pkgconfig
 USE_GNOME=	libxml2
 USE_LDCONFIG=	yes
-USE_PKGCONFIG=	build
 GNU_CONFIGURE=	yes
 CPPFLAGS+=	-I${LOCALBASE}/include
 LDFLAGS+=	-L${LOCALBASE}/lib
