Convert irc to USES=pkgconfig
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316344 35697150-7ecd-e111-bb59-0022644237b5

--- a/irc/irssi-dcc_send_limiter/Makefile
+++ b/irc/irssi-dcc_send_limiter/Makefile
@@ -20,8 +20,8 @@ COMMENT=	Irssi plugin to limit the transmit speed of DCC sends
 BUILD_DEPENDS=	irssi:${PORTSDIR}/irc/irssi
 RUN_DEPENDS=	irssi:${PORTSDIR}/irc/irssi
 
+USES=		pkgconfig
 USE_GNOME=	glib20
-USE_PKGCONFIG=	build
 NO_WRKSUBDIR=	yes
 
 PLIST_FILES=	lib/irssi/modules/lib/${DISTNAME}.so
