--- a/irc/bitlbee/Makefile
+++ b/irc/bitlbee/Makefile
@@ -20,9 +20,9 @@ PORTDOCS=	AUTHORS CHANGES CREDITS FAQ README
 PORTEXAMPLES=	bitlbee.conf motd.txt
 
 GNU_CONFIGURE=	yes
+USES=		pkgconfig
 USE_GMAKE=	yes
 USE_GNOME=	glib20
-USE_PKGCONFIG=	build
 USE_RC_SUBR=	bitlbee
 PKGMESSAGE=	${WRKDIR}/pkg-message
 
