--- a/irc/irssi-devel/Makefile
+++ b/irc/irssi-devel/Makefile
@@ -16,8 +16,8 @@ LIB_DEPENDS=	glib-2.0:${PORTSDIR}/devel/glib20
 CONFLICTS=	irssi-0.8*
 
 GNU_CONFIGURE=	yes
+USES=		pkgconfig
 USE_GMAKE=	yes
-USE_PKGCONFIG=	build
 WANT_PERL=	yes
 MAKE_JOBS_SAFE=	yes
 
