Fix after previous commit
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316345 35697150-7ecd-e111-bb59-0022644237b5

--- a/graphics/ImageMagick/Makefile
+++ b/graphics/ImageMagick/Makefile
@@ -35,6 +35,7 @@ LICENSE=	AL2
 USES=		pkgconfig pathfix
 USE_XZ=		yes
 USE_PERL5=	yes
+WANT_GNOME=	yes
 USE_AUTOTOOLS=	libltdl
 # For some reason, using our libtool breaks the build into pieces:
 #USE_AUTOTOOLS+=	libtool
