- Fix ccache for CURRENT world builds by automatically defining   CCACHE_CPP2=1 when COMPILER_TYPE=clang (this will be removed   once upstream fixes the issue). This does not address port   builds yet. - Add more hints for building with clang - Split MASTER_SITES into 2 lines - Note that textproc/libexttextcat is an example port that currently   fails to build with clang+ccache due to bug 8118 ('unused -I'). I   plan to add the upstream patch to fix this after more testing.
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316346 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/ccache/files/world-ccache.in
+++ b/devel/ccache/files/world-ccache.in
@@ -4,6 +4,8 @@
 printf "Please, use one of the compiler links in\n%%PREFIX%%/%%CCLINKDIR%%/world\nto invoke ccache\n" >&2 &&
 exit 1
 
+[ "${COMPILER_TYPE}" = "clang" ] && export CCACHE_CPP2=1
+
 unset CCACHE_PATH
 export CCACHE_COMPILERCHECK=content
 exec %%PREFIX%%/%%CCLINKDIR%%/${0##*/} "$@"
