--- a/devel/ccache/Makefile
+++ b/devel/ccache/Makefile
@@ -3,8 +3,10 @@
 
 PORTNAME=	ccache
 PORTVERSION=	3.1.9
+PORTREVISION=	1
 CATEGORIES=	devel
-MASTER_SITES=	http://www.samba.org/ftp/ccache/ CRITICAL
+MASTER_SITES=	http://www.samba.org/ftp/ccache/ \
+		CRITICAL
 
 MAINTAINER=	bdrewery@FreeBSD.org
 COMMENT=	Tool to minimize the compile time of C/C++ programs
