Update to 2.1.10 release.
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316347 35697150-7ecd-e111-bb59-0022644237b5

--- a/print/pecl-pdflib/Makefile
+++ b/print/pecl-pdflib/Makefile
@@ -1,12 +1,8 @@
-# New ports collection makefile for:	pecl-pdflib
-# Date created:			25 Jun 2004
-# Whom:				Alex Dupre <ale@FreeBSD.org>
-#
+# Created by: Alex Dupre <ale@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	pdflib
-PORTVERSION=	2.1.9
+PORTVERSION=	2.1.10
 CATEGORIES=	print pear
 MASTER_SITES=	http://pecl.php.net/get/
 PKGNAMEPREFIX=	pecl-
