--- a/java/icedtea-web/Makefile
+++ b/java/icedtea-web/Makefile
@@ -21,7 +21,7 @@ USE_JAVA=	yes
 JAVA_OS=	native
 JAVA_VENDOR=	openjdk
 JAVA_VERSION=	1.6+
-USE_PKGCONFIG=	yes
+USES=		pkgconfig
 USE_PERL5_BUILD=yes
 USE_XORG=	x11
 WANT_GNOME=	yes
