--- a/japanese/ochusha/Makefile
+++ b/japanese/ochusha/Makefile
@@ -14,12 +14,12 @@ COMMENT=	GUI BBS browser for 2ch.net
 MAN1=		ochusha.1
 MANCOMPRESSED=	no
 
+USES=		pkgconfig
 USE_BZIP2=	yes
 USE_GNOME=	glib20 gtk20 libxml2
 GNU_CONFIGURE=	yes
 USE_LDCONFIG=	yes
 USE_AUTOTOOLS=	libtool
-USE_PKGCONFIG=	yes
 
 DESKTOP_ENTRIES="Ochusha" "${COMMENT}" \
 		"${PREFIX}/share/ochusha/ochusha32.xpm" \
