--- a/japanese/scim-tables/Makefile
+++ b/japanese/scim-tables/Makefile
@@ -13,9 +13,9 @@ COMMENT=	SCIM table based Japanese input methods
 BUILD_DEPENDS=	scim-make-table:${PORTSDIR}/textproc/scim-table-imengine
 RUN_DEPENDS=	scim-make-table:${PORTSDIR}/textproc/scim-table-imengine
 
+USES=		pkgconfig
 USE_GMAKE=	yes
 GNU_CONFIGURE=	yes
-USE_PKGCONFIG=	build
 
 .include <bsd.port.pre.mk>
 
