--- a/java/classpath/Makefile
+++ b/java/classpath/Makefile
@@ -17,11 +17,11 @@ COMMENT=	A GNU project to create a free Java class library
 LICENSE=	GPLv2
 
 GNU_CONFIGURE=	yes
+USES=		pkgconfig
 USE_GMAKE=	yes
 USE_ICONV=	yes
 USE_LDCONFIG=	yes
 USE_PERL5_BUILD=yes
-USE_PKGCONFIG=	build
 USE_XORG=	x11 ice xtst xaw xproto xext
 WANT_GNOME=	yes
 
