--- a/astro/cfitsio/Makefile
+++ b/astro/cfitsio/Makefile
@@ -26,7 +26,7 @@ GNU_CONFIGURE=	yes
 MAKE_JOBS_SAFE=	yes
 USE_LDCONFIG=	yes
 USES=		pkgconfig
-RKSRC=		${WRKDIR}/${PORTNAME}
+WRKSRC=		${WRKDIR}/${PORTNAME}
 
 PORTDOCS=	*
 
