Add www/mochiweb, an Erlang library for building lightweight HTTP servers.
This is the original version from Mochi Media, Inc.


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316362 35697150-7ecd-e111-bb59-0022644237b5

--- a/www/Makefile
+++ b/www/Makefile
@@ -448,6 +448,7 @@
     SUBDIR += mkapachepw
     SUBDIR += mknmz-wwwoffle
     SUBDIR += mnogosearch
+    SUBDIR += mochiweb
     SUBDIR += mod_amazon_proxy
     SUBDIR += mod_antiloris
     SUBDIR += mod_asn
