--- a/www/mochiweb/Makefile
+++ b/www/mochiweb/Makefile
@@ -10,6 +10,9 @@ COMMENT=	Erlang library for building lightweight HTTP servers
 
 LICENSE=	MIT
 
+BUILD_DEPENDS=	erlc:${PORTSDIR}/lang/erlang
+RUN_DEPENDS=	erl:${PORTSDIR}/lang/erlang
+
 PLIST_SUB=	VERSION="${PORTVERSION}"
 
 USE_GITHUB=	yes
