New port: py-pytsk,  python bindings for the sleuthkit WWW: https://code.google.com/p/pytsk/
Approved by:	miwi (mentor)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316366 35697150-7ecd-e111-bb59-0022644237b5

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -737,6 +737,7 @@
     SUBDIR += py-iowait
     SUBDIR += py-nagiosplugin
     SUBDIR += py-psutil
+    SUBDIR += py-pytsk
     SUBDIR += py-ranger
     SUBDIR += py-salt
     SUBDIR += py-salt-api
