Add www/mochiweb-basho, the Basho fork of MochiWeb used in the Webmachine application.
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316367 35697150-7ecd-e111-bb59-0022644237b5

--- a/www/Makefile
+++ b/www/Makefile
@@ -449,6 +449,7 @@
     SUBDIR += mknmz-wwwoffle
     SUBDIR += mnogosearch
     SUBDIR += mochiweb
+    SUBDIR += mochiweb-basho
     SUBDIR += mod_amazon_proxy
     SUBDIR += mod_antiloris
     SUBDIR += mod_asn
