Document conflicts with www/mochiweb-basho.
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316368 35697150-7ecd-e111-bb59-0022644237b5

--- a/www/mochiweb/Makefile
+++ b/www/mochiweb/Makefile
@@ -13,6 +13,8 @@ LICENSE=	MIT
 BUILD_DEPENDS=	erlc:${PORTSDIR}/lang/erlang
 RUN_DEPENDS=	erl:${PORTSDIR}/lang/erlang
 
+CONFLICTS=	mochiweb-basho-[0-9]*
+
 PLIST_SUB=	VERSION="${PORTVERSION}"
 
 USE_GITHUB=	yes
