- Remove redundant lines and style clean-ups. - Fix (accept-process-output) to use (with-local-quit). - Replace (inactivate-current-input-method-function) with   (deactivate-current-input-method-function). - Replace (inactivate-input-method) with (deactivate-input-method).
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316369 35697150-7ecd-e111-bb59-0022644237b5

--- a/editors/tamago/Makefile
+++ b/editors/tamago/Makefile
@@ -3,7 +3,7 @@
 
 PORTNAME=	tamago
 PORTVERSION=	4.0.6.0.20041122.19
-PORTREVISION=	4
+PORTREVISION=	5
 CATEGORIES=	editors elisp
 MASTER_SITES=	${MASTER_SITE_DEBIAN}
 MASTER_SITE_SUBDIR=	pool/main/e/egg
@@ -24,8 +24,7 @@ USE_GMAKE=	yes
 GNU_CONFIGURE=	yes
 USE_EMACS=	yes
 WRKSRC=		${WRKDIR}/egg-4.0.6+0.20041122cvs
-ELISPDIR=	${PREFIX}/${EMACS_LIBDIR_WITH_VER}/site-lisp
-PLIST_SUB=	ELISPDIR="${EMACS_LIBDIR_WITH_VER}/site-lisp"
+PLIST_SUB=	ELISPDIR="${EMACS_VERSION_SITE_LISPDIR}"
 PORTDOCS=	AUTHORS ChangeLog ChangeLog.1997-1998 \
 		ChangeLog.2000-2001 PROBLEMS README.ja.txt TODO \
 		README.Debian changelog.Debian
@@ -33,7 +32,10 @@ OPTIONS_DEFINE=	DOCS
 
 .include <bsd.port.pre.mk>
 
-.if ${EMACS_PORT_NAME} == emacs21 || ${EMACS_PORT_NAME} == emacs22 || ${EMACS_PORT_NAME} == emacs23 || ${EMACS_PORT_NAME} == emacs24
+.if ${EMACS_PORT_NAME} == emacs21 || \
+	${EMACS_PORT_NAME} == emacs22 || \
+	${EMACS_PORT_NAME} == emacs23 || \
+	${EMACS_PORT_NAME} == emacs24
 PLIST_SUB+=	HAS_JISX0213=""
 .else
 PLIST_SUB+=	HAS_JISX0213="@comment "
