--- a/audio/ladspa/Makefile
+++ b/audio/ladspa/Makefile
@@ -29,7 +29,7 @@ BUILD_WRKSRC=	${WRKSRC}/src
 MAKE_JOBS_SAFE=	yes
 
 post-patch:
-	${REINPLACE_CMD} -e 's,-ldl,,; s,-O3,${CFLAGS},; \
+	${REINPLACE_CMD} -e 's,-ldl,,; s,-O3,${CFLAGS},; s,-Werror ,,; \
 		s,^CC,#CC,;s,^CPP,#CPP,;s,CPP,CXX,; s,^CXXFLAGS.*=,CXXFLAGS+=,' \
 		${WRKSRC}/src/makefile
 
