- Add LICENSE - Remove outdated PERL_LEVEL check - Cleanup Makefile header
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316374 35697150-7ecd-e111-bb59-0022644237b5

--- a/x11-toolkits/p5-Tk-Role-HasWidgets/Makefile
+++ b/x11-toolkits/p5-Tk-Role-HasWidgets/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	p5-Tk-Role-HasWidgets
-# Date created:		2011-10-10
-# Whom:			Sunpoet Po-Chuan Hsieh <sunpoet@FreeBSD.org>
-#
+# Created by: Sunpoet Po-Chuan Hsieh <sunpoet@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	Tk-Role-HasWidgets
 PORTVERSION=	1.112.380
@@ -15,19 +11,15 @@ DISTNAME=	${PORTNAME}-${PORTVERSION:R}${PORTVERSION:E}
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Keep track of your Tk widgets
 
+LICENSE=	ART10 GPLv1
+LICENSE_COMB=	dual
+
 BUILD_DEPENDS=	p5-Moose>=0.92:${PORTSDIR}/devel/p5-Moose \
 		p5-MooseX-Has-Sugar>=0:${PORTSDIR}/devel/p5-MooseX-Has-Sugar
-RUN_DEPENDS=	p5-Moose>=0.92:${PORTSDIR}/devel/p5-Moose \
-		p5-MooseX-Has-Sugar>=0:${PORTSDIR}/devel/p5-MooseX-Has-Sugar
+RUN_DEPENDS:=	${BUILD_DEPENDS}
 
 PERL_MODBUILD=	yes
 
 MAN3=		Tk::Role::HasWidgets.3
 
-.include <bsd.port.pre.mk>
-
-.if ${PERL_LEVEL} < 501001
-TEST_DEPENDS+=	p5-Test-Simple>=0.88:${PORTSDIR}/devel/p5-Test-Simple
-.endif
-
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
