--- a/x11-clocks/xfce4-timer-plugin/Makefile
+++ b/x11-clocks/xfce4-timer-plugin/Makefile
@@ -2,22 +2,21 @@
 # $FreeBSD$
 
 PORTNAME=	xfce4-timer-plugin
-PORTVERSION=	1.0.0
+PORTVERSION=	1.0.2
 CATEGORIES=	x11-clocks xfce
 MASTER_SITES=	${MASTER_SITE_XFCE}
 MASTER_SITE_SUBDIR=src/panel-plugins/${PORTNAME}/${PORTVERSION:R}
 DIST_SUBDIR=	xfce4
 
 MAINTAINER=	xfce@FreeBSD.org
-COMMENT=	A timer plugin for Xfce
+COMMENT=	Timer plugin for Xfce
 
 USE_BZIP2=	yes
 USE_GMAKE=	yes
 INSTALLS_ICONS=	yes
-USE_GETTEXT=	yes
 GNU_CONFIGURE=	yes
-USE_GNOME=	gtk20 intltool intlhack
+USE_GNOME=	glib20 gtk20 intltool intlhack
 USE_XFCE=	configenv libmenu libutil panel
-USES=		pkgconfig
+USES=		pkgconfig gettext
 
 .include <bsd.port.mk>
